# Multi-Agent-Research-Assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml
app/: main.py
app/agents/: base.py  critique_agent.py  reader_agent.py  research_agent.py  writer_agent.py
app/api/v1/routes/: research.py
app/core/: config.py  logging.py  security.py
app/exceptions/: custom_exceptions.py  handlers.py
app/graph/: nodes.py  router.py  state.py  workflow.py
app/middleware/: logging_middleware.py  rate_limit.py  request_id.py
app/models/: agent_io.py  schemas.py
app/prompts/: critique_prompt.py  reader_prompt.py  research_prompt.py  writer_prompt.py
app/services/: llm_service.py
app/tools/: registry.py  scraper_tool.py  tavily_tool.py
docs/: API_TESTING.md
tests/test_agents/: test_critique_agent.py  test_reader_agent.py  test_research_agent.py  test_writer_agent.py
tests/test_api/: test_infrastructure.py  test_rate_limit.py  test_research_route.py
tests/test_graph/: test_workflow.py
tests/test_tools/: test_scraper_tool.py  test_tavily_tool.py
