[project]
name = "research-assistant-backend"
version = "0.1.0"
description = "Backend for Multi-Agent AI Research Assistant"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langchain>=0.3.0",
    "langchain-groq>=1.1.3",
    "langgraph>=0.2.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pydantic-settings>=2.6.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "ruff>=0.7.0",
    "slowapi>=0.1.10",
    "tavily-python>=0.5.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]
